Actions
Bug #10494
closedrds: cast between incompatible function types
Start date:
2019-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/io/ib/clients/rds/rdsddi.c:948:8: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] NULL, (pfi_t)rds_rsrv, rds_open, rds_close, NULL, &info ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 22d021df94bf5d3f1afa670447527dae297e2012
commit 22d021df94bf5d3f1afa670447527dae297e2012 Author: Toomas Soome <tsoome@me.com> Date: 2019-03-11T20:21:51.000Z 10494 rds: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: C Fraire <cfraire@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions